Fix LinkedIn URL in Hero section

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <div class="cta-buttons" role="group" aria-label="Primary actions">
       <a class="btn btn-primary" href="#contact"><span aria-hidden="true">💬</span> Get In Touch</a>
       <a class="btn btn-secondary" href="https://drive.google.com/file/d/1YzyM952Rk_yXcmys_ai02bNhEBZ_gKUO/view?usp=drive_link" target="_blank" rel="noopener noreferrer"><span aria-hidden="true">📄</span> View / Download CV</a>
-      <a class="btn btn-secondary" href="https://www.linkedin.com/in/sagorika/" target="_blank" rel="noopener noreferrer"><span aria-hidden="true">🔗</span> LinkedIn</a>
+      <a class="btn btn-secondary" href="https://www.linkedin.com/in/sagorika-product/" target="_blank" rel="noopener noreferrer"><span aria-hidden="true">🔗</span> LinkedIn</a>
     </div>
   </div>
 
