--- a/index.html
+++ b/index.html
@@ -413,7 +413,6 @@
   <div class="container">
     <div class="section-title">
       <div class="cta-buttons" role="group" aria-label="Video CTA" style="margin-bottom:1rem;">
-        <a class="btn btn-primary" href="#contact"><span aria-hidden="true">💬</span> Get In Touch</a>
       </div>
       <h2 id="video-heading">30 Second Pitch</h2>
       <p>Meet Sagorika in 30 Seconds<br>A quick introduction to my journey from IT/EdTech Products to AI Product Management</p>
@@ -657,70 +656,53 @@
 <section id="fun-break" class="fun-break fade-in" aria-labelledby="fun-break-heading">
   <style>
     .fun-break {
-      background: #f9f9f9; /* subtle, portfolio-friendly light gray */
-      border-top: 1px solid #e0e0e0;
-      border-bottom: 1px solid #e0e0e0;
-      padding: 60px 0;
-      text-align: center;
-      position: relative;
+      background:#f9f9f9;
+      border-top:1px solid #e0e0e0;
+      border-bottom:1px solid #e0e0e0;
+      padding:60px 0;
+      text-align:center;
+      position:relative;
     }
-    .fun-break h2 {
-      font-size: 2rem;
-      margin-bottom: 0.25rem;
-      color: #0a66c2;
-    }
-    .fun-break h3 {
-      font-size: 1.5rem;
-      margin-top: 0.75rem;
-      color: #333;
-    }
-    .fun-break p { color: #555; margin: 0.25rem 0; }
-    .player-info { font-weight: 600; color: #333; margin-bottom: 10px; }
-    .tic-tac-toe {
-      display: flex; flex-direction: column; align-items: center; margin-top: 1rem; position: relative;
-    }
-    .board {
-      display: grid; grid-template-columns: repeat(3, 100px); gap: 8px; margin-bottom: 1rem;
-    }
+    .fun-break h2 {font-size:2rem;margin-bottom:0.25rem;color:#0a66c2;}
+    .fun-break h3 {font-size:1.5rem;margin-top:0.75rem;color:#333;}
+    .fun-break p {color:#555;margin:0.25rem 0;}
+    .player-info {font-weight:600;color:#333;margin-bottom:10px;}
+    .tic-tac-toe {display:flex;flex-direction:column;align-items:center;margin-top:1rem;position:relative;}
+    .board {display:grid;grid-template-columns:repeat(3,100px);gap:8px;margin-bottom:1rem;position:relative;}
     .cell {
-      width: 100px; height: 100px; background: #fff; border: 2px solid #0a66c2; border-radius: 12px;
-      font-size: 2rem; font-weight: bold; color: #0a66c2; display: flex; align-items: center; justify-content: center;
-      cursor: pointer; transition: background 0.3s;
+      width:100px;height:100px;background:#fff;border:2px solid #0a66c2;border-radius:12px;
+      font-size:2rem;font-weight:bold;color:#0a66c2;display:flex;align-items:center;justify-content:center;
+      cursor:pointer;transition:background 0.3s;
     }
-    .cell:hover { background: rgba(10, 102, 194, 0.08); }
+    .cell:hover {background:rgba(10,102,194,0.08);}
     .status-box {
-      background: #fff; border: 2px solid #0a66c2; border-radius: 10px;
-      padding: 12px 20px; font-weight: 700; color: #0a66c2; min-width: 220px; margin-bottom: 12px;
+      background:#fff;border:2px solid #0a66c2;border-radius:10px;
+      padding:12px 20px;font-weight:700;color:#0a66c2;min-width:220px;margin-bottom:12px;
     }
     .fun-break button {
-      min-width: 140px; padding: 10px 18px; font-weight: 700; border: 2px solid #0a66c2; border-radius: 10px;
-      background: #fff; color: #0a66c2; cursor: pointer; transition: all 0.3s; margin-top: 8px;
+      min-width:140px;padding:10px 18px;font-weight:700;border:2px solid #0a66c2;border-radius:10px;
+      background:#fff;color:#0a66c2;cursor:pointer;transition:all 0.3s;margin-top:8px;
     }
-    .fun-break button:hover { background: #0a66c2; color: #fff; transform: translateY(-2px); }
+    .fun-break button:hover {background:#0a66c2;color:#fff;transform:translateY(-2px);}
     #confetti-canvas {
-      position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 2;
+      position:absolute;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:2;
     }
     .win-line {
-      position: absolute;
-      background: #0a66c2;
-      height: 4px;
-      width: 0;
-      transform-origin: left center;
-      transition: width 0.5s ease;
-      z-index: 3;
+      position:absolute;
+      background:#0a66c2;
+      height:4px;
+      width:0;
+      transform-origin:left center;
+      transition:width 0.5s ease;
+      z-index:3;
     }
-    .container {
-      max-width: 1100px;
-      margin: 0 auto;
-      padding: 0 20px;
-    }
+    .container {max-width:1100px;margin:0 auto;padding:0 20px;}
   </style>
 
   <canvas id="confetti-canvas"></canvas>
   <div class="container">
     <div class="section-title">
       <h2 id="fun-break-heading">🎉 Fun Break</h2>
-      <p><span id="games-count">1</span> game played so far!</p>
       <h3>Let's Play Tic Tac Toe</h3>
       <p>"It seems you're confused with my portfolio — let's lighten the mood. Let's play Tic Tac Toe."</p>
     </div>
@@ -736,6 +718,122 @@
       <button id="restart">Reset Game</button>
     </div>
   </div>
+
+  <script>
+    const cells=document.querySelectorAll('.cell');
+    const restartBtn=document.getElementById('restart');
+    const gamesCount=document.getElementById('games-count');
+    const statusBox=document.getElementById('status');
+    const canvas=document.getElementById('confetti-canvas');
+    const ctx=canvas.getContext('2d');
+    const winLine=document.getElementById('win-line');
+    const board=document.getElementById('board');
+
+    let boardState=Array(9).fill(''),gamesPlayed=1,gameOver=false,confettiPieces=[],confettiAnimation;
+
+    function resizeCanvas(){canvas.width=canvas.offsetWidth;canvas.height=canvas.offsetHeight;}
+    window.addEventListener('resize',resizeCanvas);resizeCanvas();
+
+    function createConfetti(){
+      confettiPieces=Array.from({length:100},()=>({
+        x:Math.random()*canvas.width,y:Math.random()*-canvas.height,size:Math.random()*8+4,
+        color:`hsl(${Math.random()*360},100%,50%)`,speed:Math.random()*3+2,
+        rotation:Math.random()*360,rotationSpeed:Math.random()*5-2.5
+      }));
+    }
+    function drawConfetti(){
+      ctx.clearRect(0,0,canvas.width,canvas.height);
+      confettiPieces.forEach(p=>{
+        ctx.save();ctx.translate(p.x,p.y);ctx.rotate((p.rotation*Math.PI)/180);
+        ctx.fillStyle=p.color;ctx.fillRect(-p.size/2,-p.size/2,p.size,p.size);ctx.restore();
+        p.y+=p.speed;p.rotation+=p.rotationSpeed;if(p.y>canvas.height)p.y=-10;
+      });
+      if(confettiPieces.length)confettiAnimation=requestAnimationFrame(drawConfetti);
+    }
+
+    const patterns=[[0,1,2],[3,4,5],[6,7,8],[0,3,6],[1,4,7],[2,5,8],[0,4,8],[2,4,6]];
+
+    function checkWinner(){
+      for(let [a,b,c]of patterns){
+        if(boardState[a]&&boardState[a]===boardState[b]&&boardState[a]===boardState[c]){
+          drawWinLine([a,b,c]);
+          return boardState[a];
+        }
+      }
+      return boardState.includes('')?null:'Draw';
+    }
+
+    function bestMove(){
+      // Make computer weaker: only perfect 40% of time
+      if(Math.random()<0.4){
+        // Try winning first
+        for(let i=0;i<9;i++){if(boardState[i]===''){boardState[i]='O';if(checkWinner()==='O'){boardState[i]='';return i;}boardState[i]='';}}
+        // Try blocking player
+        for(let i=0;i<9;i++){if(boardState[i]===''){boardState[i]='X';if(checkWinner()==='X'){boardState[i]='';return i;}boardState[i]='';}}
+      }
+      // Otherwise random
+      const empty=boardState.map((v,i)=>v===''?i:null).filter(v=>v!==null);
+      return empty[Math.floor(Math.random()*empty.length)];
+    }
+
+    function computerMove(){
+      const move=bestMove();if(move==null)return;
+      boardState[move]='O';cells[move].textContent='O';
+    }
+
+    function handleClick(e){
+      const index=e.target.dataset.index;
+      if(!boardState[index]&&!gameOver){
+        boardState[index]='X';e.target.textContent='X';
+        let winner=checkWinner();if(winner)return endGame(winner);
+        statusBox.textContent="Computer's Turn (O)";
+        setTimeout(()=>{
+          computerMove();
+          winner=checkWinner();
+          if(winner)return endGame(winner);
+          statusBox.textContent="Your Turn (X)";
+        },500);
+      }
+    }
+
+    function drawWinLine(combo){
+      const rects=combo.map(i=>cells[i].getBoundingClientRect());
+      const boardRect=board.getBoundingClientRect();
+      const x1=(rects[0].left+rects[0].width/2)-boardRect.left;
+      const y1=(rects[0].top+rects[0].height/2)-boardRect.top;
+      const x2=(rects[2].left+rects[2].width/2)-boardRect.left;
+      const y2=(rects[2].top+rects[2].height/2)-boardRect.top;
+      const length=Math.hypot(x2-x1,y2-y1);
+      const angle=Math.atan2(y2-y1,x2-x1)*180/Math.PI;
+      winLine.style.width='0px';
+      winLine.style.transform=`translate(${x1}px,${y1}px) rotate(${angle}deg)`;
+      winLine.offsetWidth;
+      setTimeout(()=>{winLine.style.width=length+'px';},10);
+    }
+
+    function endGame(winner){
+      gameOver=true;
+      if(winner==='Draw'){statusBox.textContent="🤝 It's a Draw!";}
+      else if(winner==='X'){
+        statusBox.textContent="🎉 You Win!";
+        createConfetti();drawConfetti();
+        setTimeout(()=>{confettiPieces=[];ctx.clearRect(0,0,canvas.width,canvas.height);cancelAnimationFrame(confettiAnimation);},5000);
+      }else{statusBox.textContent="💻 Computer Wins!";}
+      gamesPlayed++;gamesCount.textContent=gamesPlayed;
+    }
+
+    function resetBoard(){
+      boardState.fill('');
+      cells.forEach(cell=>cell.textContent='');
+      gameOver=false;statusBox.textContent="Your Turn (X)";
+      confettiPieces=[];ctx.clearRect(0,0,canvas.width,canvas.height);
+      cancelAnimationFrame(confettiAnimation);
+      winLine.style.width='0';
+    }
+
+    cells.forEach(cell=>cell.addEventListener('click',handleClick));
+    restartBtn.addEventListener('click',resetBoard);
+  </script>
 </section>
 
 <!-- TESTIMONIALS (no images) -->
